fixing button spacing

--- a/main.css
+++ b/main.css
@@ -311,7 +311,7 @@ fieldset {
     width: 60vw;
     background-color: #FF8E00;
     color: #2d2d2d;
-    margin: 2vw auto 1vh;
+    margin: 2vw auto 3vh;
     border-radius: 5px;
     border: 2px solid #2d2d2d;
 }
